k8s/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: jaeger
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:1.72.0
        ports:
        - containerPort: 16686
          name: jaeger-ui
        - containerPort: 14268
          name: jaeger-coll
        - containerPort: 6831
          name: jaeger-agent
          protocol: UDP
        readinessProbe:
          httpGet:
            path: /
            port: 16686
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /
            port: 16686
          initialDelaySeconds: 15
          periodSeconds: 20
