k8s/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: jaeger
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "jaeger.archse.eng.br"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jaeger
            port:
              number: 16686
